fix(3156126186): align transactions modals to Figma (#313)

--- a/src/components/UI/Modal/ProgressModal/ProgressModalBody/ProgressModalBody.module.scss
+++ b/src/components/UI/Modal/ProgressModal/ProgressModalBody/ProgressModalBody.module.scss
@@ -1,8 +1,13 @@
-.progressModal {
+.progressModalBody {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   & > * {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+
     &:not(:first-child) {
       margin-top: 15px;
     }
